--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
             <li><a href="#services" data-text="Services" class="menu-btn"><strong>Services</strong></a></li>
             <li><a href="#skills" data-text="Skills" class="menu-btn"><strong>Skills</strong></a></li>
             <li><a href="#projects" data-text="Projects" class="menu-btn"><strong>Projects</strong></a></li>
-            <li><a href="#interns" data-text="Interns" class="menu-btn"><strong>Interns</strong></a></li>
+<!--             <li><a href="#interns" data-text="Interns" class="menu-btn"><strong>Interns</strong></a></li> -->
             <li><a href="#contact" data-text="Contact" class="menu-btn"><strong>Contact</strong></a></li>
           </ul>
           <div class="menu-btn">
